--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.google.dagger:dagger:2.8'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
+
+    compile 'com.aurelhubert:ahbottomnavigation:2.1.0'
 }
