--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
         android:name=".TragApp"
         android:theme="@style/AppTheme">
@@ -26,6 +26,9 @@
         </activity>
 
         <activity android:name=".ui.MainActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".ui.account.about_app.AboutAppActivity"
             android:screenOrientation="portrait"/>
 
         <meta-data android:name="com.google.android.gms.version"
