--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,12 @@
         <activity android:name=".ui.account.about_app.AboutAppActivity"
             android:screenOrientation="portrait"/>
 
+        <activity android:name=".ui.account.settings.SettingsActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".ui.account.my_data.MyDataActivity"
+            android:screenOrientation="portrait"/>
+
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
